// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderFoodCard スナップショットテスト renderFoodCard の出力が変更されていないこと 1`] = `
"
            <div class="card-container" data-food-id="1">
                <div class="undo-background">
                    <div class="undo-icon">⟲</div>
                    <div class="undo-text">取り消し</div>
                </div>
                <div class="food-card swipeable">
                    
            <div class="food-card-header">
                <input type="text" class="food-name" value="テスト料理" 
                       data-food-id="1">
                <button class="delete-btn" data-food-id="1">×</button>
            </div>
        
                    
            <div class="weight-display" data-copy-value="100" style="cursor: pointer; user-select: none;" title="タップでコピー">100g</div>
        
                    <div class="calculation-history">
                    <div class="history-header">履歴</div>
                    <div class="history-items"><div class="history-item">
                        <span class="history-operation">-20g</span>
                        <span class="history-time">12:30</span>
                    </div><div class="history-item">
                        <span class="history-operation">+50g</span>
                        <span class="history-time">12:00</span>
                    </div></div>
                </div>
                    
            <div class="controls">
                <div class="control-row">
                    <label>重量:</label>
                    <span></span>
                    <input type="number" class="weight-input" id="weight-input-1" placeholder="0" data-food-id="1">
                    <button class="control-btn add-weight-btn" data-food-id="1">+</button>
                </div>
                
                <div class="control-row">
                    <label>食器重量:</label>
                    <select class="dish-select" id="dish-select-1" data-food-id="1">
                        <option value="">選択</option>
                        
                    </select>
                    <input type="number" class="dish-weight-input" id="dish-weight-1" placeholder="0" data-food-id="1">
                    <button class="control-btn subtract-weight-btn" data-food-id="1">-</button>
                </div>
                
                
            </div>
        
                    
                </div>
            </div>
        "
`;

exports[`renderFoodCard スナップショットテスト 履歴がない場合のrenderFoodCardの出力が変更されていないこと 1`] = `
"
            <div class="card-container" data-food-id="3">
                <div class="undo-background">
                    <div class="undo-icon">⟲</div>
                    <div class="undo-text">取り消し</div>
                </div>
                <div class="food-card ">
                    
            <div class="food-card-header">
                <input type="text" class="food-name" value="履歴なし料理" 
                       data-food-id="3">
                <button class="delete-btn" data-food-id="3">×</button>
            </div>
        
                    
            <div class="weight-display" data-copy-value="50" style="cursor: pointer; user-select: none;" title="タップでコピー">50g</div>
        
                    
                    
            <div class="controls">
                <div class="control-row">
                    <label>重量:</label>
                    <span></span>
                    <input type="number" class="weight-input" id="weight-input-3" placeholder="0" data-food-id="3">
                    <button class="control-btn add-weight-btn" data-food-id="3">+</button>
                </div>
                
                <div class="control-row">
                    <label>食器重量:</label>
                    <select class="dish-select" id="dish-select-3" data-food-id="3">
                        <option value="">選択</option>
                        
                    </select>
                    <input type="number" class="dish-weight-input" id="dish-weight-3" placeholder="0" data-food-id="3">
                    <button class="control-btn subtract-weight-btn" data-food-id="3">-</button>
                </div>
                
                
            </div>
        
                    
                </div>
            </div>
        "
`;

exports[`renderFoodCard スナップショットテスト 計算設定がない場合のrenderFoodCardの出力が変更されていないこと 1`] = `
"
            <div class="card-container" data-food-id="2">
                <div class="undo-background">
                    <div class="undo-icon">⟲</div>
                    <div class="undo-text">取り消し</div>
                </div>
                <div class="food-card ">
                    
            <div class="food-card-header">
                <input type="text" class="food-name" value="計算なし料理" 
                       data-food-id="2">
                <button class="delete-btn" data-food-id="2">×</button>
            </div>
        
                    
            <div class="weight-display" data-copy-value="200" style="cursor: pointer; user-select: none;" title="タップでコピー">200g</div>
        
                    
                    
            <div class="controls">
                <div class="control-row">
                    <label>重量:</label>
                    <span></span>
                    <input type="number" class="weight-input" id="weight-input-2" placeholder="0" data-food-id="2">
                    <button class="control-btn add-weight-btn" data-food-id="2">+</button>
                </div>
                
                <div class="control-row">
                    <label>食器重量:</label>
                    <select class="dish-select" id="dish-select-2" data-food-id="2">
                        <option value="">選択</option>
                        
                    </select>
                    <input type="number" class="dish-weight-input" id="dish-weight-2" placeholder="0" data-food-id="2">
                    <button class="control-btn subtract-weight-btn" data-food-id="2">-</button>
                </div>
                
                
            </div>
        
                    
                </div>
            </div>
        "
`;
